// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with call getDate no id : mount 1`] = `
<OrderComponent
  order={
    Object {
      "date": 2,
      "items": Array [
        "d",
        "k",
      ],
      "shop": "dore",
    }
  }
>
  <div
    className="Order"
  >
    <div
      className="Order-header"
    >
      <span
        className="Order-shop"
      >
        dore
      </span>
      <span
        id="date"
      >
        2 апреля 2022 год
      </span>
    </div>
    <div
      className="Order-items"
    >
      <div
        className="Order-item"
        key="0"
      >
        d
      </div>
      <div
        className="Order-item"
        key="1"
      >
        k
      </div>
    </div>
  </div>
</OrderComponent>
`;

exports[`with call getDate no id : render 1`] = `
<div
  class="Order"
>
  <div
    class="Order-header"
  >
    <span
      class="Order-shop"
    >
      dore
    </span>
    <span
      id="date"
    >
      2 апреля 2022 год
    </span>
  </div>
  <div
    class="Order-items"
  >
    <div
      class="Order-item"
    >
      d
    </div>
    <div
      class="Order-item"
    >
      k
    </div>
  </div>
</div>
`;

exports[`with call getDate no id : shallow 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      dore
    </span>
    <span
      id="date"
    >
      2 апреля 2022 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      d
    </div>
    <div
      className="Order-item"
      key="1"
    >
      k
    </div>
  </div>
</div>
`;

exports[`with call getDate with items : mount 1`] = `
<OrderComponent
  order={
    Object {
      "date": 2,
      "id": 3,
      "items": Array [
        "d",
        "k",
      ],
      "shop": "dore",
    }
  }
>
  <div
    className="Order"
  >
    <div
      className="Order-header"
    >
      <span
        className="Order-shop"
      >
        dore
      </span>
      <span
        id="date"
      >
        2 апреля 2022 год
      </span>
    </div>
    <div
      className="Order-items"
    >
      <div
        className="Order-item"
        key="0"
      >
        d
      </div>
      <div
        className="Order-item"
        key="1"
      >
        k
      </div>
    </div>
  </div>
</OrderComponent>
`;

exports[`with call getDate with items : render 1`] = `
<div
  class="Order"
>
  <div
    class="Order-header"
  >
    <span
      class="Order-shop"
    >
      dore
    </span>
    <span
      id="date"
    >
      2 апреля 2022 год
    </span>
  </div>
  <div
    class="Order-items"
  >
    <div
      class="Order-item"
    >
      d
    </div>
    <div
      class="Order-item"
    >
      k
    </div>
  </div>
</div>
`;

exports[`with call getDate with items : shallow 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      dore
    </span>
    <span
      id="date"
    >
      2 апреля 2022 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      d
    </div>
    <div
      className="Order-item"
      key="1"
    >
      k
    </div>
  </div>
</div>
`;

exports[`with call getDate without items : mount 1`] = `
<OrderComponent
  order={
    Object {
      "date": 2,
      "id": 3,
      "items": Array [],
      "shop": "dore",
    }
  }
>
  <div
    className="Order"
  >
    <div
      className="Order-header"
    >
      <span
        className="Order-shop"
      >
        dore
      </span>
      <span
        id="date"
      >
        2 апреля 2022 год
      </span>
    </div>
    <div
      className="Order-items"
    >
      <div>
        Заказ пуст...
      </div>
    </div>
  </div>
</OrderComponent>
`;

exports[`with call getDate without items : render 1`] = `
<div
  class="Order"
>
  <div
    class="Order-header"
  >
    <span
      class="Order-shop"
    >
      dore
    </span>
    <span
      id="date"
    >
      2 апреля 2022 год
    </span>
  </div>
  <div
    class="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;

exports[`with call getDate without items : shallow 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      dore
    </span>
    <span
      id="date"
    >
      2 апреля 2022 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;

exports[`without call getDate no date : mount 1`] = `
<OrderComponent
  order={
    Object {
      "id": 3,
      "items": Array [
        "d",
        "k",
      ],
      "shop": "dore",
    }
  }
/>
`;

exports[`without call getDate no date : render 1`] = `null`;

exports[`without call getDate no date : shallow 1`] = `""`;

exports[`without call getDate no shop : mount 1`] = `
<OrderComponent
  order={
    Object {
      "date": 2,
      "id": 3,
      "items": Array [
        "d",
        "k",
      ],
    }
  }
/>
`;

exports[`without call getDate no shop : render 1`] = `null`;

exports[`without call getDate no shop : shallow 1`] = `""`;
